# 30

./: mypy.ini  requirements.txt
.github/workflows/: main.yml
app/: CRUD.py  database.py  main.py  models.py  schemas.py
module_30_ci_linters/materials/gitlab-ci/: gitlab-ci.yaml  requirements.txt
module_30_ci_linters/materials/gitlab-ci/src/: main.py
module_30_ci_linters/materials/gitlab-ci/tests/: test_application.py
prod/: requirements.txt
prod/mysite/: Dockerfile  docker-compose.yml  pyproject.toml
test/: fastapi.py  test_fastapi.py
