[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
license = "MIT"
readme = "README.md"
authors = ["Ruslan Zolotarev <666ruslanzolotarev@gmail.com>"]
packages = [{include = "mysite"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
gunicorn = "^20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
